--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.6",
         "php-flasher/flasher-laravel": "^2.1",
-        "spatie/laravel-html": "^3.11"
+        "spatie/laravel-html": "^3.11",
+        "spatie/laravel-permission": "^6.20"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
